# gtkwebcam

gtkwebcam/: Makefile.am  Makefile.in  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
gtkwebcam/autom4te.cache/: output.0  requests  traces.0
gtkwebcam/src/: Makefile.am  Makefile.in
gtkwebcam/src/.deps/: ControlWindow.Po  ControlWindow_glade.Po  ccvt_c.Po  gtkwebcam.Po  jpegwriter.Po  webcam.Po
gtkwebcam/src/control/: AUTHORS  ChangeLog  ControlWindow.cc  ControlWindow.cc_new  ControlWindow.hh  ControlWindow.hh_new  ControlWindow_glade.cc  ControlWindow_glade.hh  Makefile.am  Makefile.in  README  gtkwebcam.cc  gtkwebcam.cc_new  gtkwebcamcontrol.cc  gtkwebcamcontrol.glade  gtkwebcamcontrol.gladep
gtkwebcam/src/viewer/: Makefile.am  Makefile.in  ccvt_c.c  jpegwriter.cxx  jpegwriter.hxx  viewer.cxx  viewer.hxx
